pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-missing-from.ub
factory: {
  state-moves: [
    { to: 'core.thing@resource.new' }
  ]
}
